tests/NormalTests/paczka1/fuzzy1/29869624.err
Error in line 11: gyABDoh A410 260,0
Error in line 13: 6iaVaVpAc A410 46,7
Error in line 14: A542 A542 1,3
Error in line 17: dDZ0zuQXBo A410 36,9
Error in line 26: 6iaVaVpAc A542 40,5
Error in line 37: dDZ0zuQXBo A5_2 39,0
